Fix user info modal popover z-index issue
Covers https://github.com/gitterHQ/gitter/issues/1130

--- a/public/js/views/righttoolbar/rightToolbarView.less
+++ b/public/js/views/righttoolbar/rightToolbarView.less
@@ -9,7 +9,7 @@
 @import "activity.less";
 
 .right-toolbar-region {
-  z-index: 100;
+  z-index: 200;
   position: relative;
   top: 0;
   bottom: 0;
